--- a/indexstyle.css
+++ b/indexstyle.css
@@ -19,14 +19,38 @@
     padding: 7px !important;
 }
 
-.test {
+.homeText {
     position: relative;
     text-align: end;
     font-size: 50px;
     font-family: Arial, Helvetica, sans-serif;
-    color: black;
+    color: white;
     margin-top: 65px;
   }
+
+.portfolioText {
+    text-align: center;
+    font-size: 30px;
+    color: white;
+    padding-top: 30px;
+    text-decoration: underline;
+}
+
+.form-row {
+    color: white;
+    font-size: 20px;
+    margin-left: 10px;
+}
+
+.form-group {
+    color: white;
+    font-size: 20px;
+}
+
+.video {
+    text-align: center;
+    padding: 25px;
+}
 
 /* body, html {
 height: 100%;
