--- a/indexstyle.css
+++ b/indexstyle.css
@@ -50,6 +50,14 @@
 .video {
     text-align: center;
     padding: 25px;
+    padding-top: 0px;
+}
+
+#section1 {
+    color: white;
+    text-align: center;
+    font-size: 20px;
+    text-decoration: underline;
 }
 
 /* body, html {
