--- a/indexstyle.css
+++ b/indexstyle.css
@@ -33,7 +33,7 @@
     font-size: 30px;
     color: white;
     padding-top: 30px;
-    text-decoration: underline;
+    /* text-decoration: underline; */
 }
 
 .form-row {
@@ -54,42 +54,42 @@
 }
 
 #section1 {
-    color: white;
     text-align: center;
     font-size: 20px;
-    text-decoration: underline;
+    /* text-decoration: underline; */
+    
 }
 
-/* body, html {
-height: 100%;
-margin: 0;
-} */
-/* 
-.img {
-    width: 100%;
-    height: auto;
-} */
+.test {
+    text-align: center;
+}
+
+#resume {
+    color: white;
+}
+
+#resume:hover {
+    color: red;
+}
+
+#Project1 {
+    color: white;
+}
+
+#Project1:hover {
+    color: red;
+}
 
 body {
-    /* Location of the image */
-    /* background-image: url(https://thewallpaper.co//wp-content/uploads/2016/10preview/green-nature-beautiful-wallpaper-desktop-1920x1080-1080p-hd-hd-wallpapers-cool-images-4k-high-definition-mac-desktop-images-widescreen-display-digital-photos-1920x1080.jpg); */
     
-    /* Background image is centered vertically and horizontally at all times */
     background-position: center center;
     
-    /* Background image doesn't tile */
     background-repeat: no-repeat;
     
-    /* Background image is fixed in the viewport so that it doesn't move when 
-       the content's height is greater than the image's height */
     background-attachment: fixed;
     
-    /* This is what makes the background image rescale based
-       on the container's size */
     background-size: cover;
     
-    /* Set a background color that will be displayed
-       while the background image is loading */
     background-color: #000000;
   }
 
