--- a/indexstyle.css
+++ b/indexstyle.css
@@ -1,8 +1,9 @@
-.nav {
+#navBar {
     font-size: 22px;
     background-color: rgb(15, 90, 124);
-    margin: 0 !important;
-    padding: 0 !important;
+    margin: 0;
+    padding: 0;
+    border-bottom: 2px solid black;
 }
 
 .nav .nav-link {
@@ -15,8 +16,11 @@
     font-size: 50px;
     color: white;
     background-color: rgb(15, 90, 124);
-    margin: 0 !important;
-    padding: 7px !important;
+    margin: 0;
+    padding-top: 8px;
+    /* text-decoration-line: underline;
+    text-decoration-thickness: 1px;
+    text-decoration-color: rgb(255, 255, 255); */
 }
 
 .homeText {
@@ -26,6 +30,7 @@
     font-family: Arial, Helvetica, sans-serif;
     color: white;
     margin-top: 65px;
+    background-color: rgb(189, 189, 189);
   }
 
 .portfolioText {
@@ -33,7 +38,6 @@
     font-size: 30px;
     color: white;
     padding-top: 30px;
-    /* text-decoration: underline; */
 }
 
 .form-row {
@@ -60,10 +64,6 @@
     
 }
 
-.test {
-    text-align: center;
-}
-
 #resume {
     color: white;
 }
@@ -81,16 +81,7 @@
 }
 
 body {
-    
-    background-position: center center;
-    
-    background-repeat: no-repeat;
-    
-    background-attachment: fixed;
-    
-    background-size: cover;
-    
-    background-color: #000000;
+    background-color: #959595; 
   }
 
 
